--- a/src/App.css
+++ b/src/App.css
@@ -56,7 +56,7 @@ header {
 button.tabs {
   margin: 5px;
   padding: 10px 15px;
-  background: #ff69b4; /* Fun, friendly pink */
+  background: #fa8ec4;; /* Fun, friendly pink */
   color: white;
   border: none;
   border-radius: 10px;
@@ -201,6 +201,30 @@ select {
 
 /* Styling for the Template Sections */
 .template-section {
+    margin-top: 40px;
+    padding: 20px;
+    background-color: #f0f0f0;
+    border-radius: 8px;
+    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+    width: 80%;
+    max-width: 600px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+  
+  .template-section h2 {
+    font-size: 1.5em;
+    margin-bottom: 15px;
+  }
+  
+  .template-section p {
+    font-size: 1em;
+    color: #333;
+    line-height: 1.5;
+  }  
+
+/* Styling for the Template Sections */
+.template-section {
   margin-top: 40px;
   padding: 20px;
   background-color: #f0f0f0;
@@ -222,3 +246,45 @@ select {
   color: #333;
   line-height: 1.5;
 }
+
+/* Style for the advice list */
+.message {
+    margin: 15px 0;
+    padding: 5px;
+    font-size: 18px;
+  }
+  
+  .message:hover {
+    background-color: #ffeff2; /* Light pink on hover */
+    color: #d16d7f; /* Dark pink text when hovering */
+  }
+  
+  /* Style for the advice popup */
+  .popup-background {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: rgba(0, 0, 0, 0.5);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  
+  .popup-content {
+    padding: 20px;
+    border-radius: 12px;
+    width: 300px;
+    max-width: 90%;
+    text-align: center;
+    background-color: #ffeff2; /* Light pink background for the advice box */
+  }
+  
+  .popup-content button {
+    margin-top: 10px;
+    border: 1px solid;
+    border-color: black;
+    padding: 5px 10px;
+  }
+  
