--- a/src/index.css
+++ b/src/index.css
@@ -13,7 +13,13 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-a {
+body {
+  background: #fffdf6; /* Soft beige paper-like color */
+  padding:0px;
+  margin:0px;
+}
+
+/* a {
   font-weight: 500;
   color: #646cff;
   text-decoration: inherit;
@@ -28,14 +34,15 @@ body {
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
+  padding:0px
 }
 
 h1 {
   font-size: 3.2em;
   line-height: 1.1;
-}
+} */
 
-button {
+/* button {
   border-radius: 8px;
   border: 1px solid transparent;
   padding: 0.6em 1.2em;
@@ -52,7 +59,7 @@ button:hover {
 button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
-}
+} */
 
 @media (prefers-color-scheme: light) {
   :root {
